# strata

./: .clang-format  .clang-tidy  .clang-uml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  changes.diff
.github/workflows/: build.yml  ci.yml  cmake-multi-platform.yml
cmake/: clang_tidy.cmake  warnings.cmake
diagrams/: strata_core.puml
docs/: ARCHITECTURE.md  CODING_CONVENTIONS.md  LIFETIME_MODEL.md  NAMING_CONVENTIONS.md  RENDERING_PIPELINE.md
docs/diagrams/: strata_core.puml
docs/notes/: 3d_math_reminders.md
engine/base/: CMakeLists.txt
engine/base/include/strata/base/: diagnostics.h  math.h
engine/base/src/: diagnostics.cpp
engine/core/: CMakeLists.txt
engine/core/include/strata/core/: action_map.h  application.h  ecs_min.h
engine/core/src/: action_map.cpp  application.cc  application.cpp  ecs_min.cc  ecs_min.cpp
engine/gfx/: CMakeLists.txt
engine/gfx/backend/vk/: CMakeLists.txt  vk_check.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_descriptor.cpp  vk_descriptor.h  vk_device.cpp  vk_device.h  vk_gpu_device.cpp  vk_gpu_device.h  vk_gpu_device_pipeline.cpp  vk_gpu_device_resources.cpp  vk_gpu_device_swapchain.cpp  vk_instance.cpp  vk_instance.h  vk_pipeline_basic.cpp  vk_pipeline_basic.h  vk_rhi_factory.cpp  vk_swapchain.cpp  vk_swapchain.h  vk_wsi_bridge.h  vk_wsi_bridge_win32.cpp  vk_wsi_bridge_x11.cpp
engine/gfx/backend/vk/vk_gpu_device/: vk_gpu_device.cpp  vk_gpu_device.h  vk_gpu_device_descriptors.cpp  vk_gpu_device_handles.cpp  vk_gpu_device_pipeline.cpp  vk_gpu_device_recording.cpp  vk_gpu_device_resources.cpp  vk_gpu_device_submission.cpp  vk_gpu_device_swapchain.cpp
engine/gfx/include/strata/gfx/: graphics_device.h  renderer2d.h  renderer2d_vulkan.h
engine/gfx/include/strata/gfx/renderer/: basic_pass.h  camera_3d.h  render_2d.h  render_graph.h  render_scene.h  renderer.h
engine/gfx/include/strata/gfx/rhi/: gpu_device.h  gpu_types.h
engine/gfx/include/strata/gfx/vulkan/: swapchain.h  vulkan_context.h  wsi_bridge.h
engine/gfx/renderer/: CMakeLists.txt  render_2d.cpp  render_2d.h  render_graph.h  render_scene.h
engine/gfx/renderer/src/: basic_pass.cpp  render_2d.cpp  render_graph.cpp  render_scene.cpp  renderer.cpp
engine/gfx/rhi/: CMakeLists.txt  gpu_device.h  gpu_types.h
engine/gfx/shaders/: flat_color.frag  fullscreen_triangle.vert  procedural_cube.vert  vertex_color.frag
engine/gfx/src/: graphics_device.cc  renderer2d.cc
engine/gfx/src/backends/vulkan/: swapchain.cc  vk_pipeline_basic.cc  vk_pipeline_basic.h  vulkan_context.cc  vulkan_device.cc  vulkan_device.h  wsi_bridge_win32.cc  wsi_bridge_x11.cc
engine/gfx/src/vulkan/: renderer2d.cc  renderer2d_vulkan.cc  swapchain.cc  vk_pipeline_basic.cc  vk_pipeline_basic.h  vulkan_context.cc  wsi_bridge_win32.cc
engine/platform/: CMakeLists.txt  wsi_handle.h
engine/platform/include/strata/platform/: clock.h  input.h  window.h  wsi_handle.h
engine/platform/src/: clock.cc  clock.cpp  filesystem.cc  filesystem.cpp  input_raw.cc  input_raw.cpp
engine/platform/src/win32/: window_win32.cc  window_win32.cpp
engine/platform/src/x11/: window_x11.cc  window_x11.cpp
engine/platform/wayland/: window_wayland.cpp
engine/platform/win32/: window_win32.cpp
engine/platform/x11/: window_x11.cpp
games/arcade_shooter/: CMakeLists.txt
games/arcade_shooter/src/: main.cc  main.cpp
src/: CMakeLists.txt
src/game/arcade_shooter/: CMakeLists.txt  arcade_shooter.cpp
src/gfx/backend/vk/: CMakeLists.txt  vk_command_buffer.cpp  vk_command_buffer.h  vk_device.cpp  vk_device.h  vk_gpu_device.cpp  vk_gpu_device.h  vk_instance.cpp  vk_instance.h  vk_pipeline_basic.cpp  vk_pipeline_basic.h  vk_swapchain.cpp  vk_swapchain.h
src/gfx/renderer/: CMakeLists.txt  render_2d.cpp  render_2d.h  render_graph.cpp  render_graph.h  render_scene.cpp  render_scene.h
src/gfx/rhi/: CMakeLists.txt  gpu_device.cpp  gpu_device.h  gpu_types.h
src/platform/: CMakeLists.txt  clock.cpp  clock.h  filesystem.cpp  filesystem.h  input_raw.cpp  input_raw.h  window.cpp  window.h  wsi_handle.h
src/platform/wayland/: window_wayland.cpp
src/platform/win32/: window_win32.cpp
src/platform/x11/: window_x11.cpp
tools/level_editor/: CMakeLists.txt
tools/level_editor/src/: main.cpp
